--- a/team.html
+++ b/team.html
@@ -18,6 +18,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
     />
+    
+    <!-- animate on scroll -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <title>Team | Zoak</title>
   </head>
   <body>
@@ -39,7 +42,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item me-2">
-              <a class="nav-link active" href="#">Our App</a>
+              <a class="nav-link" href="./index.html">Our App</a>
             </li>
             <li class="nav-item me-2">
               <a class="nav-link" href="./webShow.html">Web Panel</a>
@@ -48,7 +51,7 @@
               <a class="nav-link" href="./about.html">About</a>
             </li>
             <li class="nav-item me-2">
-              <a class="nav-link" href="./team.html">Team</a>
+              <a class="nav-link active" href="#">Team</a>
             </li>
           </ul>
           <form class="d-flex">
@@ -64,6 +67,7 @@
     >
       <div
         class="team-head d-flex flex-column align-items-center justify-content-center text-center"
+        data-aos="fade-up"
       >
         <h1 class="head1">Meet the Team</h1>
         <p class="para1 w-75 mx-auto">
@@ -74,90 +78,94 @@
       <div class="members d-flex flex-row justify-content-center flex-wrap py-4">
 
         <div
-          class="member d-flex flex-row align-items-start justify-content-center py-3 px-2"
+          class="member d-flex flex-row align-items-start justify-content-center py-3"
+          data-aos="fade-up"
         >
           <div class="member-img p-2">
             <img
-              src="./assets/images/General/Bg-about.jpg"
+              src="./assets/images/General/face.jpg"
               alt="team member"
-              width="200"
             />
           </div>
-          <div class="member-detail p-2">
+          <div class="member-detail px-3 py-2">
             <h3 class="text-white">Sourabh Sikarwar</h3>
             <hr class="bg-white w-25" />
-            <div class="social text-white">
-              <p>icon icon</p>
-            </div>
-            <p class="para2 w-75">
+            <p class="para2 w-50 my-3">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </p>
+            <div class="social text-white my-2">
+              <i class="fa-brands fa-linkedin-in me-2 fs-3 icon-color"></i>
+              <i class="fa-solid fa-envelope me-2 fs-3 icon-color"></i>
+            </div>
           </div>
         </div>
 
         <div
-          class="member d-flex flex-row align-items-start justify-content-between py-3 px-2"
+          class="member d-flex flex-row align-items-start justify-content-between py-3"
+          data-aos="fade-up"
         >
           <div class="member-img p-2">
             <img
-              src="./assets/images/General/Bg-about.jpg"
+              src="./assets/images/General/face.jpg"
               alt="team member"
-              width="200"
             />
           </div>
-          <div class="member-detail p-2">
+          <div class="member-detail px-3 py-2">
             <h3 class="text-white">Sourabh Sikarwar</h3>
             <hr class="bg-white w-25" />
-            <div class="social text-white">
-              <p>icon icon</p>
-            </div>
-            <p class="para2 w-75">
+            <p class="para2 w-50 my-3">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </p>
+            <div class="social text-white my-2">
+              <i class="fa-brands fa-linkedin-in me-2 fs-3 icon-color"></i>
+              <i class="fa-solid fa-envelope me-2 fs-3 icon-color"></i>
+            </div>
           </div>
         </div>
 
         <div
-          class="member d-flex flex-row align-items-start justify-content-center py-3 px-2"
+          class="member d-flex flex-row align-items-start justify-content-center py-3"
+          data-aos="fade-up"
         >
           <div class="member-img p-2">
             <img
-              src="./assets/images/General/Bg-about.jpg"
+              src="./assets/images/General/face.jpg"
               alt="team member"
-              width="200"
             />
           </div>
-          <div class="member-detail p-2">
+          <div class="member-detail px-3 py-2">
             <h3 class="text-white">Sourabh Sikarwar</h3>
             <hr class="bg-white w-25" />
-            <div class="social text-white">
-              <p>icon icon</p>
-            </div>
-            <p class="para2 w-75">
+            <p class="para2 w-50 my-3">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </p>
+            <div class="social text-white my-2">
+              <i class="fa-brands fa-linkedin-in me-2 fs-3 icon-color"></i>
+              <i class="fa-solid fa-envelope me-2 fs-3 icon-color"></i>
+            </div>
           </div>
         </div>
 
         <div
-          class="member d-flex flex-row align-items-start justify-content-between py-3 px-2"
+          class="member d-flex flex-row align-items-start justify-content-between py-3"
+          data-aos="fade-up"
         >
           <div class="member-img p-2">
             <img
-              src="./assets/images/General/Bg-about.jpg"
+              src="./assets/images/General/face.jpg"
               alt="team member"
-              width="200"
             />
           </div>
-          <div class="member-detail p-2">
+          <div class="member-detail px-3 py-2">
             <h3 class="text-white">Sourabh Sikarwar</h3>
             <hr class="bg-white w-25" />
-            <div class="social text-white">
-              <p>icon icon</p>
-            </div>
-            <p class="para2 w-75">
+            <p class="para2 w-50 my-3">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </p>
+            <div class="social text-white my-2">
+              <i class="fa-brands fa-linkedin-in me-2 fs-3 icon-color"></i>
+              <i class="fa-solid fa-envelope me-2 fs-3 icon-color"></i>
+            </div>
           </div>
         </div>
 
@@ -165,5 +173,10 @@
     </div>
 
     <!-- footer -->
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
