App and Team page completed

--- a/team.html
+++ b/team.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
     />
-    
+
     <!-- animate on scroll -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <title>Team | Zoak</title>
@@ -42,11 +42,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item me-2">
-<<<<<<< HEAD
               <a class="nav-link" href="./index.html">Our App</a>
-=======
-              <a class="nav-link active" href="index.html">Our App</a>
->>>>>>> 1829528ecad947652848a34c65296744e3fd98b7
             </li>
             <li class="nav-item me-2">
               <a class="nav-link" href="./webShow.html">Web Panel</a>
@@ -79,17 +75,15 @@
           suscipit commodi!
         </p>
       </div>
-      <div class="members d-flex flex-row justify-content-center flex-wrap py-4">
-
+      <div
+        class="members d-flex flex-row justify-content-center flex-wrap py-4"
+      >
         <div
           class="member d-flex flex-row align-items-start justify-content-center py-3"
           data-aos="fade-up"
         >
           <div class="member-img p-2">
-            <img
-              src="./assets/images/General/face.jpg"
-              alt="team member"
-            />
+            <img src="./assets/images/General/face.jpg" alt="team member" />
           </div>
           <div class="member-detail px-3 py-2">
             <h3 class="text-white">Sourabh Sikarwar</h3>
@@ -109,10 +103,7 @@
           data-aos="fade-up"
         >
           <div class="member-img p-2">
-            <img
-              src="./assets/images/General/face.jpg"
-              alt="team member"
-            />
+            <img src="./assets/images/General/face.jpg" alt="team member" />
           </div>
           <div class="member-detail px-3 py-2">
             <h3 class="text-white">Sourabh Sikarwar</h3>
@@ -132,10 +123,7 @@
           data-aos="fade-up"
         >
           <div class="member-img p-2">
-            <img
-              src="./assets/images/General/face.jpg"
-              alt="team member"
-            />
+            <img src="./assets/images/General/face.jpg" alt="team member" />
           </div>
           <div class="member-detail px-3 py-2">
             <h3 class="text-white">Sourabh Sikarwar</h3>
@@ -155,10 +143,7 @@
           data-aos="fade-up"
         >
           <div class="member-img p-2">
-            <img
-              src="./assets/images/General/face.jpg"
-              alt="team member"
-            />
+            <img src="./assets/images/General/face.jpg" alt="team member" />
           </div>
           <div class="member-detail px-3 py-2">
             <h3 class="text-white">Sourabh Sikarwar</h3>
@@ -172,11 +157,67 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
 
-    <!-- footer -->
+    <!-- Footer -->
+
+    <footer class="text-center py-5">
+      <div>
+        <a class="mx-auto fw-bold text-white fs-3" href="index.html">Zoak</a>
+      </div>
+      <div class="d-flex pt-3 justify-content-center flex-wrap" id="footerLink">
+        <ul class="text-center justify-content-center">
+          <li><a href="index.html">Our App</a></li>
+          <li><a href="webShow.html">Web Panel</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="team.html">Team</a></li>
+        </ul>
+      </div>
+      <div
+        class="d-flex flex-wrap justify-content-center py-3"
+        id="footerContact"
+      >
+        <div class="mx-4">
+          <a
+            ><div>
+              <i class="fa-solid me-2 my-2 fa-envelope text-white"></i
+              >test@email.com
+            </div></a
+          >
+        </div>
+        <div class="mx-4">
+          <div>
+            <i class="fa-solid me-2 my-2 fa-phone text-white"></i>+91
+            93024524XXX
+          </div>
+        </div>
+        <div class="mx-4">
+          <div>
+            <i class="fa-solid me-2 m-2 fa-location-dot text-white"></i>Ireland
+          </div>
+        </div>
+      </div>
+      <div class="d-flex flex-wrap justify-content-center">
+        <ul id="socialLinks">
+          <li>
+            <a href=""><i class="fa-brands fa-twitter fs-4 socialLinks"></i></a>
+          </li>
+          <li>
+            <a href=""
+              ><i class="fa-brands fa-linkedin fs-4 socialLinks"></i
+            ></a>
+          </li>
+          <li>
+            <a href=""
+              ><i class="fa-brands fa-instagram fs-4 socialLinks"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
+      <div>@theasperteam</div>
+    </footer>
+    <!-- Footer -->
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
