--- a/index.html
+++ b/index.html
@@ -412,7 +412,10 @@
           <button class="button1">Explore</button>
         </div>
       </div>
-          <!-- Footer -->
+    </div>
+
+    <!-- Footer -->
+
     <footer class="text-center py-5">
       <div>
         <a class="mx-auto fw-bold text-white fs-3" href="index.html">Zoak</a>
@@ -425,35 +428,54 @@
           <li><a href="team.html">Team</a></li>
         </ul>
       </div>
-      <div class="d-flex flex-wrap justify-content-center py-3" id="footerContact">
+      <div
+        class="d-flex flex-wrap justify-content-center py-3"
+        id="footerContact"
+      >
         <div class="mx-4">
-          <a><div><i class="fa-solid me-2 my-2 fa-envelope text-white"></i>test@email.com</div></a>
+          <a
+            ><div>
+              <i class="fa-solid me-2 my-2 fa-envelope text-white"></i
+              >test@email.com
+            </div></a
+          >
         </div>
         <div class="mx-4">
-          <div><i class="fa-solid me-2 my-2 fa-phone text-white"></i>+91 93024524XXX</div>
+          <div>
+            <i class="fa-solid me-2 my-2 fa-phone text-white"></i>+91
+            93024524XXX
+          </div>
         </div>
         <div class="mx-4">
-          <div><i class="fa-solid me-2 m-2 fa-location-dot text-white"></i>Ireland</div>
+          <div>
+            <i class="fa-solid me-2 m-2 fa-location-dot text-white"></i>Ireland
+          </div>
         </div>
       </div>
       <div class="d-flex flex-wrap justify-content-center">
-      <ul id="socialLinks">
-        <li><a href=""><i class="fa-brands fa-twitter fs-4 socialLinks"></i></a></li>
-        <li><a href=""><i class="fa-brands fa-linkedin fs-4 socialLinks"></i></a></li>
-        <li><a href=""><i class="fa-brands fa-instagram fs-4 socialLinks"></i></a></li>
-      </ul>       
+        <ul id="socialLinks">
+          <li>
+            <a href=""><i class="fa-brands fa-twitter fs-4 socialLinks"></i></a>
+          </li>
+          <li>
+            <a href=""
+              ><i class="fa-brands fa-linkedin fs-4 socialLinks"></i
+            ></a>
+          </li>
+          <li>
+            <a href=""
+              ><i class="fa-brands fa-instagram fs-4 socialLinks"></i
+            ></a>
+          </li>
+        </ul>
       </div>
-      <div>
-    @theasperteam
-      </div>
+      <div>@theasperteam</div>
     </footer>
     <!-- Footer -->
 
-    </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script src="./assets/scripts/script.js"></script>
+    <!-- <script src="./assets/scripts/script.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.6/dist/js/splide.min.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
