Web Panel Optimization

--- a/team.html
+++ b/team.html
@@ -54,9 +54,9 @@
               <a class="nav-link active" href="#">Team</a>
             </li>
           </ul>
-          <form class="d-flex">
-            <button class="button2 me-2" type="submit">Contact us</button>
-          </form>
+          <div class="d-flex">
+            <a href="#footer"><button class="button2 me-2" type="submit">Contact us</button></a>
+          </div>
         </div>
       </div>
     </nav>
@@ -162,7 +162,7 @@
 
     <!-- Footer -->
 
-    <footer class="text-center py-5">
+    <footer class="text-center py-5" id="footer">
       <div>
         <a class="mx-auto fw-bold text-white fs-3" href="index.html">Zoak</a>
       </div>
