--- a/about.html
+++ b/about.html
@@ -70,9 +70,9 @@
                   <a class="nav-link" href="./team.html">Team</a>
                 </li>
               </ul>
-              <form class="d-flex">
-                <button class="button2 me-2" type="submit">Contact us</button>
-              </form>
+              <div class="d-flex">
+                <a href="#footer"><button class="button2 me-2" >Contact us</button></a>
+              </div>
             </div>
           </div>
         </nav></div>
@@ -167,7 +167,7 @@
         </div>
       </div>
           <!-- Footer -->
-          <footer class="text-center py-5">
+          <footer class="text-center py-5" id="footer">
             <div>
               <a class="mx-auto fw-bold text-white fs-3" href="index.html">Zoak</a>
             </div>
