--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@
         <div class="py-5 align-items-center d-flex position-relative">
           <div id="AboutVisionMockText"></div>
           <img
-            src="./assets/images/WebMockups/Staff.png"
+            src="./assets/images/WebMockups/Staffs management.png"
             id="AboutVisionMockImg"
             className="my-auto"
           />
