--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
           <img
             src="./assets/images/WebMockups/Staffs management.png"
             id="AboutVisionMockImg"
-            className="my-auto"
+            className="my-auto w-50"
           />
         </div>
         <div class="container w-50">
