--- a/about.html
+++ b/about.html
@@ -123,12 +123,12 @@
     <!-- Vision Section -->
     <section id="Vision" class="bg-dark full-screen">
       <div class="d-flex align-items-center px-5 justify-content-start w-100">
-        <div class="py-5 align-items-center d-flex position-relative">
+        <div class="py-5 align-items-center d-flex position-relative w-50">
           <div id="AboutVisionMockText"></div>
           <img
             src="./assets/images/WebMockups/Staffs management.png"
             id="AboutVisionMockImg"
-            className="my-auto w-50"
+            className="my-auto"
           />
         </div>
         <div class="container w-50">
@@ -162,7 +162,7 @@
         </div>
         <div class="ml-auto">
           <a href="team.html">
-          <i class="fa-solid fa-angle-right icon-bg p-4"></i>
+          <i class="fa-solid fa-angle-right icon-bg px-4 py-4"></i>
         </a>
         </div>
       </div>
