--- a/index.html
+++ b/index.html
@@ -304,9 +304,9 @@
 
             <li class="splide__slide">
               <div
-                class="showcase-3 d-flex flex-row-reverse align-items-end justify-content-center"
+                class="showcase-3 d-flex flex-row-reverse align-items-end justify-content-center pb-5"
               >
-                <div class="text">
+                <div class="text mb-5">
                   <i class="fa-solid fa-thumbs-up icon-bg my-3"></i>
                   <h1 class="head1">Make safer Payments</h1>
                   <p class="para1 w-75">
@@ -322,7 +322,7 @@
                   <img
                     src="./assets/images/AppMockups/App6.png"
                     alt="app mockup"
-                    width="300"
+                    width="300 h-75"
                   />
                 </div>
               </div>
