--- a/webShow.html
+++ b/webShow.html
@@ -83,10 +83,6 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut
               exercitationem atque consequuntur!
             </p>
-            <div class="button-group my-1 d-flex align-items-center mx-auto">
-              <button class="button1">Download App</button>
-              <i class="text-white fs-2 mx-3 fa-brands fa-apple"></i>
-            </div>
           </div>
 
           <!-- image section -->
@@ -95,6 +91,7 @@
               src="./assets/images/WebMockups/Vendor profile.png"
               alt="landing phone mockup"
               class="w-50 mt-2"
+              id="webLandingScreen"
             />
             <div id="webEl"></div>
             <div id="webEl2"></div>
@@ -139,12 +136,13 @@
           </div>
         </div>
         <div class="feature-image d-flex w-50">
-          <div class="blob w-75">
+          <div class="w-75">
+            <div class="blob mx-auto">
             <img
               src="./assets/images/WebMockups/Appoinments.png"
               alt="features image"
               class="w-100"
-            />
+            /></div>
           </div>
         </div>
       </div>
