--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
       <div class="d-flex align-items-center px-5 justify-content-start w-100">
         <div class="container w-50">
           <div>
-            <i class="fa-solid fa-bullseye-arrow icon-bg"></i>
+            <i class="fa-solid fa-mobile-screen-button icon-bg"></i>
             <p class="head1">Our Mission</p>
             <p class="subTitle1">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
@@ -133,7 +133,7 @@
         </div>
         <div class="container w-50">
           <div>
-            <i class="fa-solid fa-bullseye-arrow icon-bg"></i>
+            <i class="fa-solid fa-mobile-screen-button icon-bg"></i>
             <p class="head1">Our Vision</p>
             <p class="subTitle1">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
