--- a/webShow.html
+++ b/webShow.html
@@ -116,18 +116,18 @@
           class="feature-text d-flex flex-column  justify-content-around w-50"
           id="webFeatures"
         >
-          <div class="feature-item p-1" data-aos="fade-up">
-            <h1 class="head2">Book Appointments</h1>
-            <p class="para2">
+          <div class="feature-item-web p-1" data-aos="fade-up">
+            <h1 class="head2 webFeaturesHead">Book Appointments</h1>
+            <p class="para2  webFeaturesPara">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi
               quis? Esse culpa voluptatibus natus odit, officiis totam.
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi
               quis? Esse culpa voluptatibus natus odit, officiis totam.
             </p>
           </div>
-          <div class="feature-item p-1" data-aos="fade-up">
-            <h1 class="head2">Book Appointments</h1>
-            <p class="para2">
+          <div class="feature-item-web p-1" data-aos="fade-up">
+            <h1 class="head2 webFeaturesHead">Book Appointments</h1>
+            <p class="para2  webFeaturesPara">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi
               quis? Esse culpa voluptatibus natus odit, officiis totam.
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi
