--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut
               exercitationem atque consequuntur!
             </p>
-            <div class="button-group my-1 d-flex align-items-center">
+            <div class="button-group my-1 d-flex align-items-center" id="AppLandingCTA">
               <button class="button1">Download App</button>
               <i class="text-white fs-2 mx-3 fa-brands fa-apple"></i>
             </div>
