--- a/team.html
+++ b/team.html
@@ -218,6 +218,7 @@
       <div>@theasperteam</div>
     </footer>
     <!-- Footer -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
